<resources>
    <string name="app_name">Medicare</string>
    <string name="logo">logo</string>
    <string name="saludo">Hola ! es un gusto verte de nuevo</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email*</string>
    <string name="password">Contraseña*</string>
    <string name="ingresar">INGRESAR</string>
    <string name="fo">Olvide la cotraseña</string>
    <string name="inicio">INICIO</string>
    <string name="carrito">CARRITO</string>
    <string name="pedidos">PEDIDOS</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="mr_smith">MR SMITH</string>
    <string name="calificar">Calificar</string>
    <string name="soporte">Soporte</string>
    <string name="mis_compras">Mis Compras</string>
    <string name="boton_perfil_main">PERFIL</string>
    <string name="boton_pedidos_main">PEDIDOS</string>
    <string name="boton_catalogo_main">CATALOGO</string>
    <string name="boton_ubicacion_main">UBICACION</string>
    <string name="title_activity_maps">Maps</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="ciudad">ciudad</string>
    <string name="identificacion">Identificacion</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="pagina_no_encontrada">Página no encontrada</string>
    <string name="title_producto"> NOMBRE DEL PRODUCTO  </string>
    <string name="title_Desc"> DESCRIPCIÓN  </string>
    <string name="Precio"> Precio </string>
    <string name="num">28000</string>
    <string name="agregar"> Agregar </string>
    <string name="lorem">Guante de vinilo, látex caucho natural ambidiestros no estériles desechables
    caja por 100 unidades tallas S,M y L</string>
    <string name="cantidad">CANTIDAD </string>
    <string name="invalidas">INVALIDAS</string>
    <string name="credenciales">CREDENCIALES</string>
    <string name="trans_ok">¡Transacción Exitosa!</string>
    <string name="check_correcto">¡ CORRECTO !</string>
    <string name="stop_recordd">TERMINAR GRABACION</string>
    <string name="start_recordd">INICIAR GRABACIÓN</string>
    <string name="started_record">GRABACION INICIADA</string>
    <string name="play_recordd">Reproducir grabacion</string>
    <string name="stop_play_recordd">DETENER REPRODUCCIÓN</string>
    <string name="dialog">Grabar</string>
    <string name="record_audio">Iniciar grabación</string>
    <string name="hold_for_record">Sosten para grabar</string>
    <string name="release_for_end">Suleta  para terminar la grabacion</string>
    <string name="listen_record">Puedes escuchar la grabacion</string>
    <string name="stop_listen_record">Parar reproduccion</string>
    <string name="stop_record">Detener grabación</string>
    <string name="send_record">Enviar</string>
    <string name="title_activity_mapa10">Mapa10</string>
    <string name="scanner"> Scanner QR </string>
    <string name="graciasScanner">Gracias por confiar en Medicare!</string>
    <string name="abrirScanner">Abrir Scanner</string>
    <string name="btn_pago">PAGO</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="total_a_pagar">Total a pagar $120.000</string>
    <string name="elige_tu_medio_de_pago">Elige tu medio de pago</string>
    <string name="name_hint">Nombre</string>
    <string name="number_hint">Tu número de telefono</string>
    <string name="close">Cancelar</string>
    <string name="change_profile">Cambiar foto de perfil</string>
    <string name="email_hint">Correo electronico</string>
    <string name="id_hint">Numero de identificacion</string>
    <string name="apellido_hint">Apellido</string>
    <string name="info_direccion">Informacion de ubicacion</string>
    <string name="d_nde_vives">¿Dónde vives?</string>
    <string name="txt_pais">País</string>
    <string name="lista_de_paises">Lista de paises</string>
    <string name="departamento">Departamento</string>
    <string name="lista_de_estados">Lista de estados</string>
    <string name="lista_de_ciudades">Lista de ciudades</string>
    <string name="direccion">Direccion</string>
    <string name="opciones_de_direcciones">Opciones de direcciones</string>
    <string name="opcDir">0A Sur</string>
    <string name="numDir">00–00</string>
    <string name="msg_cerrar_sesion">¿Estas seguro de cerrar sesión?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="btn_change">modificar</string>
    <string name="auth">Huella</string>
    <string name="SingUp">Registrarse</string>
    <string name="sign_up">Sing Up</string>
</resources>
