<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foreground="@drawable/textura2"
    tools:context=".EditarDireccion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txtTituloDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/d_nde_vives"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtSelectPais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_pais"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloDireccion" />


            <Spinner
                android:id="@+id/spinnerPaises"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_edittext"
                android:contentDescription="@string/lista_de_paises"
                android:popupBackground="@color/dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSelectPais" />


            <TextView
                android:id="@+id/txtSelectDepartamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/departamento"
                android:textColor="#212121"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerPaises" />

            <Spinner
                android:id="@+id/spinnerDepartamento"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_edittext"
                android:contentDescription="@string/lista_de_estados"
                android:popupBackground="@color/dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSelectDepartamento" />


            <TextView
                android:id="@+id/txtSelectCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"

                android:text="@string/ciudad"
                android:textColor="#212121"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDepartamento" />

            <Spinner
                android:id="@+id/spinnerCiudad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_edittext"
                android:contentDescription="@string/lista_de_ciudades"
                android:popupBackground="@color/dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSelectCiudad" />

            <TextView
                android:id="@+id/txtSelectDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/direccion"
                android:textColor="#212121"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCiudad" />

            <Spinner
                android:id="@+id/spinnerDireccion"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_edittext"
                android:contentDescription="@string/opciones_de_direcciones"
                android:popupBackground="@color/dark"
                app:layout_constraintEnd_toStartOf="@+id/txtOpcionDir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSelectDireccion" />

            <EditText
                android:id="@+id/txtOpcionDir"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/name_hint"
                android:background="@drawable/ic_edittext"
                android:hint="@string/opcDir"
                android:inputType="textPostalAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/txtNumDir"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCiudad"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/txtNumDir"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/name_hint"
                android:background="@drawable/ic_edittext"
                android:hint="@string/numDir"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCiudad"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/verde_correcto"
                android:fontFamily="@font/roboto"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDireccion"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
