<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="false"
    android:foreground="@drawable/textura2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/pedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marca" />

    <Button
        android:id="@+id/ubicacion"
        style='?attr/materialButtonOutlinedStyle'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-3dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/ic_ubicacion"
        android:onClick="btnIrUbicacion"
        android:text="@string/boton_ubicacion_main"
        android:textColor="@color/black"
        app:cornerRadius='15dp'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        app:strokeColor="@color/verde_correcto"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/perfil"
        style='?attr/materialButtonOutlinedStyle'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/ic_perfil"
        android:onClick="irPerfilUsuario"
        android:text="@string/boton_perfil_main"
        android:textColor="@color/black"
        app:cornerRadius='15dp'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ubicacion"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        app:strokeColor="@color/verde_correcto"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/pedidos"
        style='?attr/materialButtonOutlinedStyle'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/ic_pedidos"
        android:onClick="btnIrPedidos"
        android:text="@string/boton_pedidos_main"
        android:textColor="@color/black"
        app:cornerRadius='15dp'
        app:layout_constraintBottom_toTopOf="@+id/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949"
        app:strokeColor="@color/verde_correcto"
        app:strokeWidth="3dp" />

    <Button
        style='?attr/materialButtonOutlinedStyle'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/ic_catalogo"
        android:onClick="btnIrCatalogo"
        android:text="@string/boton_catalogo_main"
        android:textColor="@color/black"
        app:cornerRadius='15dp'
        app:layout_constraintBottom_toTopOf="@+id/perfil"
        app:layout_constraintEnd_toStartOf="@+id/pedidos"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:strokeColor="@color/verde_correcto"
        app:strokeWidth="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>